refactor: Optimizations